--- a/donkey_trainer_attempt_2_fine_tuning_using_VGG16-MultiGPU.ipynb
+++ b/donkey_trainer_attempt_2_fine_tuning_using_VGG16-MultiGPU.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion:\n",
+    "Of Interest:\n",
     "\n",
-    "Accuracy hovers at around 50% using the VGG-16 pretrained model, and training all the layers. It might be better fine-tuning only the last layers. However, don't expect things to get drastically better. Also, the training is taking (very) very long, i.e. ~10 minutes for a single epoch. So abandoning this for now.."
+    "Attempting to train the model using both the available GPUs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,8 @@
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "from PIL import Image\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import torch.nn.parallel as parallel"
    ]
   },
   {
@@ -40,13 +41,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_data = np.load('x_data.npz.npy')\n",
-    "y_data = np.load('y_data.npz.npy')"
+    "x_data = np.load('x_data.npy')\n",
+    "y_data = np.load('y_data.npy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +81,7 @@
     "use_gpu = torch.cuda.is_available()\n",
     "if use_gpu:\n",
     "    print('cuda available')\n",
-    "    vgg16 = vgg16.cuda()"
+    "    vgg16 = parallel.DataParallel(vgg16).cuda()"
    ]
   },
   {
@@ -196,8 +197,8 @@
    "outputs": [],
    "source": [
     "dataLoaders = {}\n",
-    "dataLoaders['train'] = DataLoader(train_data, batch_size=32, shuffle=True, num_workers=4)\n",
-    "dataLoaders['valid'] = DataLoader(valid_data, batch_size=32, shuffle=True, num_workers=4)"
+    "dataLoaders['train'] = DataLoader(train_data, batch_size=128, shuffle=True, num_workers=8)\n",
+    "dataLoaders['valid'] = DataLoader(valid_data, batch_size=32, shuffle=True, num_workers=8)"
    ]
   },
   {
@@ -289,7 +290,7 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "  0%|          | 0/468 [00:00<?, ?it/s]"
+      "  0%|          | 0/117 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -304,7 +305,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 468/468 [10:19<00:00,  1.22s/it]\n",
+      "100%|██████████| 117/117 [01:41<00:00,  1.15it/s]\n",
       "  0%|          | 0/94 [00:00<?, ?it/s]"
      ]
     },
@@ -312,22 +313,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train Loss: 0.0566 Acc: 0.4082\n"
+      "train Loss: 0.0223 Acc: 0.3027\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 94/94 [00:33<00:00,  3.05it/s]\n",
-      "  0%|          | 0/468 [00:00<?, ?it/s]"
+      "100%|██████████| 94/94 [00:11<00:00,  8.46it/s]\n",
+      "  0%|          | 0/117 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "valid Loss: 0.0434 Acc: 0.4723\n",
+      "valid Loss: 0.0637 Acc: 0.2860\n",
       "\n",
       "Epoch 1/24\n",
       "----------\n"
@@ -337,7 +338,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 468/468 [10:18<00:00,  1.22s/it]\n",
+      "100%|██████████| 117/117 [01:38<00:00,  1.19it/s]\n",
       "  0%|          | 0/94 [00:00<?, ?it/s]"
      ]
     },
@@ -345,22 +346,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train Loss: 0.0442 Acc: 0.4627\n"
+      "train Loss: 0.0126 Acc: 0.4121\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 94/94 [00:33<00:00,  3.04it/s]\n",
-      "  0%|          | 0/468 [00:00<?, ?it/s]"
+      "100%|██████████| 94/94 [00:11<00:00,  8.42it/s]\n",
+      "  0%|          | 0/117 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "valid Loss: 0.0423 Acc: 0.4793\n",
+      "valid Loss: 0.0428 Acc: 0.4940\n",
       "\n",
       "Epoch 2/24\n",
       "----------\n"
@@ -370,7 +371,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 468/468 [10:19<00:00,  1.22s/it]\n",
+      "100%|██████████| 117/117 [01:38<00:00,  1.19it/s]\n",
       "  0%|          | 0/94 [00:00<?, ?it/s]"
      ]
     },
@@ -378,22 +379,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train Loss: 0.0429 Acc: 0.4757\n"
+      "train Loss: 0.0109 Acc: 0.4734\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 94/94 [00:33<00:00,  3.05it/s]\n",
-      "  0%|          | 0/468 [00:00<?, ?it/s]"
+      "100%|██████████| 94/94 [00:11<00:00,  8.45it/s]\n",
+      "  0%|          | 0/117 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "valid Loss: 0.0416 Acc: 0.4907\n",
+      "valid Loss: 0.0418 Acc: 0.5003\n",
       "\n",
       "Epoch 3/24\n",
       "----------\n"
@@ -403,7 +404,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 468/468 [10:19<00:00,  1.22s/it]\n",
+      "100%|██████████| 117/117 [01:38<00:00,  1.18it/s]\n",
       "  0%|          | 0/94 [00:00<?, ?it/s]"
      ]
     },
@@ -411,22 +412,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train Loss: 0.0421 Acc: 0.4835\n"
+      "train Loss: 0.0105 Acc: 0.4854\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 94/94 [00:32<00:00,  3.05it/s]\n",
-      "  0%|          | 0/468 [00:00<?, ?it/s]"
+      "100%|██████████| 94/94 [00:11<00:00,  8.42it/s]\n",
+      "  0%|          | 0/117 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "valid Loss: 0.0403 Acc: 0.5010\n",
+      "valid Loss: 0.0405 Acc: 0.5037\n",
       "\n",
       "Epoch 4/24\n",
       "----------\n"
@@ -436,7 +437,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 468/468 [10:18<00:00,  1.22s/it]\n",
+      "100%|██████████| 117/117 [01:38<00:00,  1.18it/s]\n",
       "  0%|          | 0/94 [00:00<?, ?it/s]"
      ]
     },
@@ -444,22 +445,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train Loss: 0.0415 Acc: 0.4836\n"
+      "train Loss: 0.0103 Acc: 0.4908\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 94/94 [00:32<00:00,  3.05it/s]\n",
-      "  0%|          | 0/468 [00:00<?, ?it/s]"
+      "100%|██████████| 94/94 [00:11<00:00,  8.36it/s]\n",
+      "  0%|          | 0/117 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "valid Loss: 0.0412 Acc: 0.4820\n",
+      "valid Loss: 0.0392 Acc: 0.5173\n",
       "\n",
       "Epoch 5/24\n",
       "----------\n"
@@ -469,62 +470,114 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 33%|███▎      | 156/468 [03:26<06:52,  1.32s/it]Process Process-43:\n",
-      "Process Process-44:\n",
+      " 96%|█████████▌| 112/117 [01:34<00:04,  1.18it/s]Process Process-84:\n",
+      "KeyboardInterrupt\n",
+      "Process Process-85:\n",
+      "Process Process-83:\n",
+      "Process Process-86:\n",
       "Traceback (most recent call last):\n",
       "Traceback (most recent call last):\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 252, in _bootstrap\n",
+      "Process Process-82:\n",
+      "Traceback (most recent call last):\n",
+      "Process Process-81:\n",
+      "Process Process-88:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 252, in _bootstrap\n",
       "    self.run()\n",
-      "Process Process-41:\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 252, in _bootstrap\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 252, in _bootstrap\n",
       "    self.run()\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 93, in run\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 252, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 252, in _bootstrap\n",
+      "    self.run()\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 93, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "Process Process-42:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/site-packages/torch/utils/data/dataloader.py\", line 34, in _worker_loop\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 252, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 252, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "Process Process-87:\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/site-packages/torch/utils/data/dataloader.py\", line 34, in _worker_loop\n",
       "    r = index_queue.get()\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 93, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 252, in _bootstrap\n",
-      "    self.run()\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/site-packages/torch/utils/data/dataloader.py\", line 34, in _worker_loop\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/site-packages/torch/utils/data/dataloader.py\", line 34, in _worker_loop\n",
       "    r = index_queue.get()\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 93, in run\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/site-packages/torch/utils/data/dataloader.py\", line 34, in _worker_loop\n",
+      "    r = index_queue.get()\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/site-packages/torch/utils/data/dataloader.py\", line 34, in _worker_loop\n",
+      "    r = index_queue.get()\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 252, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 93, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/queues.py\", line 334, in get\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/queues.py\", line 334, in get\n",
       "    with self._rlock:\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/site-packages/torch/utils/data/dataloader.py\", line 34, in _worker_loop\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/queues.py\", line 334, in get\n",
+      "    with self._rlock:\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/queues.py\", line 334, in get\n",
+      "    with self._rlock:\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/site-packages/torch/utils/data/dataloader.py\", line 34, in _worker_loop\n",
       "    r = index_queue.get()\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/synchronize.py\", line 96, in __enter__\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/synchronize.py\", line 96, in __enter__\n",
       "    return self._semlock.__enter__()\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/queues.py\", line 335, in get\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/site-packages/torch/utils/data/dataloader.py\", line 34, in _worker_loop\n",
+      "    r = index_queue.get()\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/synchronize.py\", line 96, in __enter__\n",
+      "    return self._semlock.__enter__()\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/queues.py\", line 335, in get\n",
       "    res = self._reader.recv_bytes()\n",
-      "Traceback (most recent call last):\n",
-      "KeyboardInterrupt\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/queues.py\", line 334, in get\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/queues.py\", line 334, in get\n",
       "    with self._rlock:\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/connection.py\", line 216, in recv_bytes\n",
-      "    buf = self._recv_bytes(maxlength)\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/synchronize.py\", line 96, in __enter__\n",
-      "    return self._semlock.__enter__()\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/connection.py\", line 407, in _recv_bytes\n",
-      "    buf = self._recv(4)\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 252, in _bootstrap\n",
-      "    self.run()\n",
       "KeyboardInterrupt\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/connection.py\", line 379, in _recv\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/queues.py\", line 334, in get\n",
+      "    with self._rlock:\n",
+      "KeyboardInterrupt\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/site-packages/torch/utils/data/dataloader.py\", line 34, in _worker_loop\n",
+      "    r = index_queue.get()\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/connection.py\", line 216, in recv_bytes\n",
+      "    buf = self._recv_bytes(maxlength)\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/synchronize.py\", line 96, in __enter__\n",
+      "    return self._semlock.__enter__()\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 252, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/synchronize.py\", line 96, in __enter__\n",
+      "    return self._semlock.__enter__()\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/connection.py\", line 407, in _recv_bytes\n",
+      "    buf = self._recv(4)\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "KeyboardInterrupt\n",
+      "KeyboardInterrupt\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/queues.py\", line 334, in get\n",
+      "    with self._rlock:\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/connection.py\", line 379, in _recv\n",
       "    chunk = read(handle, remaining)\n",
       "KeyboardInterrupt\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/process.py\", line 93, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/site-packages/torch/utils/data/dataloader.py\", line 34, in _worker_loop\n",
-      "    r = index_queue.get()\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/queues.py\", line 334, in get\n",
-      "    with self._rlock:\n",
-      "  File \"/home/paperspace/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/synchronize.py\", line 96, in __enter__\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/synchronize.py\", line 96, in __enter__\n",
       "    return self._semlock.__enter__()\n",
-      "KeyboardInterrupt\n"
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/synchronize.py\", line 96, in __enter__\n",
+      "    return self._semlock.__enter__()\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/site-packages/torch/utils/data/dataloader.py\", line 34, in _worker_loop\n",
+      "    r = index_queue.get()\n",
+      "KeyboardInterrupt\n",
+      "KeyboardInterrupt\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/queues.py\", line 334, in get\n",
+      "    with self._rlock:\n",
+      "  File \"/home/apil/anaconda3/envs/pytorch/lib/python3.5/multiprocessing/synchronize.py\", line 96, in __enter__\n",
+      "    return self._semlock.__enter__()\n"
      ]
     },
     {
